syntax = "proto3";

option java_package = "it.gabfav.es_cqrs_es.domain.proto";

message BankAccountMessage {
    string id = 4;
    string accountHolder = 5;
    uint64 amount = 6;
    uint64 creation = 7;
    uint64 lastEdit = 8;
    uint32 version = 10;
}

message BankAccountCreatedMessage {
    string id = 4;
    string accountHolder = 5;
    uint64 instant = 6;
}

message AmountAddedMessage {
    string id = 4;
    uint64 amount = 5;
    uint64 instant = 6;
}

message AmountSubtractedMessage {
    string id = 4;
    uint64 amount = 5;
    uint64 instant = 6;
}
